# IjccrlChessGui

./: CMakeLists.txt  Readme.md
cli/: CMakeLists.txt
cli/src/: main.cpp
config/: example.runner.json
core/: CMakeLists.txt
core/include/ijccrl/core/api/: RunnerConfig.h  RunnerService.h
core/include/ijccrl/core/broadcast/: IBroadcastAdapter.h  TlcsFeedAdapter.h  TlcsFeedWriter.h  TlcsIniAdapter.h
core/include/ijccrl/core/export/: ExportWriter.h
core/include/ijccrl/core/game/: GameRunner.h  GameState.h  TimeControl.h
core/include/ijccrl/core/openings/: EpdParser.h  Opening.h  OpeningPolicy.h  PgnSuite.h
core/include/ijccrl/core/persist/: CheckpointState.h
core/include/ijccrl/core/pgn/: PgnGame.h  PgnWriter.h
core/include/ijccrl/core/process/: Process.h
core/include/ijccrl/core/rules/: Termination.h
core/include/ijccrl/core/runtime/: EnginePool.h  MatchRunner.h
core/include/ijccrl/core/stats/: StandingsTable.h
core/include/ijccrl/core/tournament/: RoundRobinScheduler.h  SwissScheduler.h  TournamentScheduler.h  TournamentTypes.h
core/include/ijccrl/core/uci/: UciEngine.h
core/include/ijccrl/core/util/: AtomicFileWriter.h
core/src/: ijccrlcore.cpp
core/src/api/: RunnerConfig.cpp  RunnerService.cpp
core/src/broadcast/: TlcsFeedAdapter.cpp  TlcsFeedWriter.cpp  TlcsIniAdapter.cpp
core/src/export/: ExportWriter.cpp
core/src/game/: GameRunner.cpp
core/src/openings/: EpdParser.cpp  OpeningPolicy.cpp  PgnSuite.cpp
core/src/persist/: CheckpointState.cpp
core/src/pgn/: PgnWriter.cpp
core/src/process/: Process.cpp
core/src/rules/: Termination.cpp
core/src/runtime/: EnginePool.cpp  MatchRunner.cpp
core/src/stats/: StandingsTable.cpp
core/src/tournament/: RoundRobinScheduler.cpp  SwissScheduler.cpp
core/src/uci/: UciEngine.cpp
core/src/util/: AtomicFileWriter.cpp
docs/: architecture.md  dev_notes.md  mvp_test_checklist.md  production_checklist.md  tlcs-feed-format.md  tlcs_pgn_mode.md  windows_build.md
gui/: CMakeLists.txt
gui/src/: MainWindow.cpp  MainWindow.h  TournamentWizard.cpp  TournamentWizard.h  main.cpp
gui/src/Models/: EnginesModel.cpp  EnginesModel.h  StandingsModel.cpp  StandingsModel.h
gui/src/Widgets/: LiveGamePanel.cpp  LiveGamePanel.h  LogView.cpp  LogView.h
scripts/: run_mvp_win.cmd  run_mvp_win.ps1
